hphp/hack/test/typecheck/expression_trees/instance_method_error2.php.exp
File "instance_method_error2.php", line 8, characters 12-17:
Expression trees only support named property access. (Parsing[1002])
